# app

./: CREATE_PR_INSTRUCTIONS.md  FEATURE_MULTI_PATH_ROUTING.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  TESTING_GUIDE.md  package-lock.json  package.json  tsconfig.app.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/.vitepress/: config.mts
docs/docs/: index.md
docs/docs/apps/: index.md
native-app/: README.md  package.json
native-app/src/: ThemeContext.tsx
native-app/src/screens/: DepositScreen.tsx  WithdrawScreen.tsx
src/: App.tsx  index.css
src/components/: AnchorSimulator.tsx  Hero.tsx  QuoteCalculator.tsx  Testimonials.tsx
src/components/__tests__/: QuoteCalculator.test.tsx
web-app/: .gitignore  package-lock.json  package.json
web-app/src/: App.tsx  ThemeContext.tsx  index.css  styled.d.ts  theme.ts
wow-engine/: .dockerignore  .env.example  .sqlx  Cargo.toml  Dockerfile  README.md
wow-engine/benches/: router_benchmarks.rs
wow-engine/migrations/: 001_initial_schema.down.sql  001_initial_schema.sql  002_add_historical_routes_and_bridge_quotas.down.sql  002_add_historical_routes_and_bridge_quotas.sql
wow-engine/scripts/: setup_db.sh
wow-engine/src/: config.rs  error.rs  http_client.rs  lib.rs  main.rs  resilience.rs
wow-engine/src/anchor/: mod.rs  sep24.rs  sep38.rs
wow-engine/src/api/: auth.rs  middleware.rs  mod.rs  validated_request.rs
wow-engine/src/bridge/: attestation.rs  cctp.rs  debridge.rs  gas_oracle.rs  mod.rs
wow-engine/src/db/: mod.rs  models.rs  operations.rs  service.rs
wow-engine/src/router/: dex.rs  flow_optimizer.rs  mod.rs  slippage.rs
wow-engine/tests/: api_tests.rs  chaos_tests.rs  multi_path_routing_tests.rs  signature_tests.rs  transaction_atomicity_tests.rs
(+5 files in other folders)
