[package]
name = "wow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
reqwest-middleware = "0.5.2"
reqwest-retry = "0.9.1"
retry-policies = "0.5.2"
tracing = "0.1.44"
envy = "0.4.2"
moka = { version = "0.12.15", features = ["future"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
ed25519-dalek = "2.1.1"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
axum-test = "16"
wiremock = "0.6.5"
